--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,7 @@
-PG_URL=
+POSTGRES_USER=course_serv
+POSTGRES_PASSWORD=12345678
+POSTGRES_DB=course_serv
+
+PG_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost/${POSTGRES_DB}
 
 JWT_SECRET=NzI1YjIzNzE0ODg1NmZmYmY5YTg5OGEx
